# raytracer

./: .clang-format  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  math.h  renderer.h  rendering.h  rt.h  util.h
src/engine/math/: functions.c  functions.h  types.h
src/engine/math/private/: functions.cpp
src/engine/math/public/: all.hpp  common.hpp  functions.hpp  ray.hpp  sphere.hpp  types.hpp
src/engine/misc/private/: tga.cpp
src/engine/misc/public/: tga.hpp
src/engine/renderer/: render_graph.h  rendering_functions.c  rendering_functions.h  types.h
src/engine/renderer/public/: common.hpp  material.hpp  render_queue.hpp
src/engine/rendering/: functions.c  functions.h  types.h
src/engine/util/: functions.c  functions.h  stb_image_impl.c  std.h  system.h  tga.c  tga.h
src/engine/util/public/: all.hpp  functions.hpp  std.hpp
src/programs/test/: CMakeLists.txt  test_main.c  test_main.cpp
